force-app/main/default/objects/Contact/fields/Account_Active_Last_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Account_Active_Last_Transactions__c</fullName>
    <formula>AND(
 Account.RecordType.DeveloperName = &apos;Empresa&apos;,
 IF(AND(NOT( ISBLANK( Account.Fecha_Ultima_Transaccion__c ) ), Account.Transaccion_cantidad_dias__c  &lt;= 90),
			TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Active Last Transactions</label>
    <type>Checkbox</type>
</CustomField>