force-app/main/default/objects/Contact/fields/Account_NPS__c.field-meta.xml
<CustomField>
    <fullName>Account_NPS__c</fullName>
    <label>Account NPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPS</fullName>
                <default>true</default>
                <label>NPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>