force-app/main/default/objects/Contact/fields/Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Frequency__c</fullName>
    <label>Contact Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>