force-app/main/default/objects/Contact/recordTypes/Contacto_Comunidad.recordType-meta.xml
<RecordType>
    <fullName>Contacto_Comunidad</fullName>
    <active>true</active>
    <label>Contacto Comunidad</label>
</RecordType>