force-app/main/default/objects/Contact/validationRules/Valida_HomePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_HomePhone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(HomePhone)) &amp;&amp;
LEFT(HomePhone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>The phone number must start with the &quot;+&quot; character</errorMessage>
</ValidationRule>