force-app/main/default/objects/Contact/validationRules/Valida_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Phone)) &amp;&amp;
LEFT(Phone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>The phone number must start with the &quot;+&quot; character</errorMessage>
</ValidationRule>